--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -13,3 +13,8 @@ chrono = "0.4.19"
 nom = "6.0.1"
 tabular = "0.1.4"
 thiserror = "1.0.22"
+rayon = "1.5.0"
+itertools = "0.9.0"
+
+[profile.release]
+debug = true
