--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -15,6 +15,7 @@ tabular = "0.1.4"
 thiserror = "1.0.22"
 rayon = "1.5.0"
 itertools = "0.9.0"
+smallvec = "1.5.1"
 
 [profile.release]
 debug = true
