--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc2023"
 version = "0.1.0"
 authors = ["Arno Velds <avelds@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -16,6 +16,7 @@ thiserror = "1.0.22"
 rayon = "1.5.0"
 itertools = "0.12.0"
 smallvec = "1.5.1"
+num = "0.4.1"
 
 [profile.release]
 debug = true
