--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -17,6 +17,8 @@ rayon = "1.5.0"
 itertools = "0.12.0"
 smallvec = "1.5.1"
 num = "0.4.1"
+indexmap = "2.1.0"
+ndarray = "0.15.6"
 
 [profile.release]
 debug = true
